# quartz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  qtcreator.sh
exp/scintilla/: CMakeLists.txt  Main.cxx  Platform.h  ScintillaDocument.h  ScintillaEdit.h  ScintillaEditBase.h  SymbolExportImport.h
exp/scintilla/lexers/: CMakeLists.txt
plugins/plugin_creator/source/: AbstractTemplateProvider.cpp  AbstractTemplateProvider.h  CMakeLists.txt  CheckBoxDeligate.cpp  CheckBoxDeligate.h  CodeGenerator.cpp  CodeGenerator.h  ContentProvider.cpp  ContentProvider.h  CreatorPlugin.cpp  CreatorPlugin.h  CreatorWidget.cpp  CreatorWidget.h  EntryPoint.cpp  GenInfo.cpp  GenInfo.h  ITreeNode.h  NodeProvider.cpp  NodeProvider.h  Plugin.cpp  Plugin.h  PluginBundle.cpp  PluginBundle.h  Template.cpp  Template.h  TemplateConfigWidget.cpp  TemplateConfigWidget.h  TemplateInstance.cpp  TemplateInstance.h  TemplateManager.cpp  TemplateManager.h  TemplateSelectorDialog.cpp  TemplateSelectorDialog.h  TemplateSelectorWidget.cpp  TemplateSelectorWidget.h  VarConfigWidget.cpp  VarConfigWidget.h  Variable.cpp  Variable.h  creator.qrc
plugins/plugin_orek_client/source/: CMakeLists.txt  ContentProvider.cpp  ContentProvider.h  EntryPoint.cpp  NodeProvider.cpp  NodeProvider.h  OrekClient.cpp  OrekPlugin.cpp  OrekPlugin.h  PluginBundle.cpp  PluginBundle.h  orek_client.qrc
plugins/plugin_serial_console/source/: BaudRateEditDialog.cpp  BaudRateEditDialog.h  CMakeLists.txt  ConsoleHolder.cpp  ConsoleHolder.h  ConsoleWidget.cpp  ConsoleWidget.h  Constants.cpp  Constants.h  ContentProvider.cpp  ContentProvider.h  Dialogs.cpp  Dialogs.h  EntryPoint.cpp  MainWidget.cpp  MainWidget.h  NodeProvider.cpp  NodeProvider.h  Plugin.cpp  Plugin.h  PluginBundle.cpp  PluginBundle.h  SerialConsole.cpp  SerialConsolePlugin.cpp  SerialConsolePlugin.h  SerialDeviceManager.cpp  SerialDeviceManager.h  SerialSettings.cpp  SerialSettings.h  SerialUtils.cpp  SerialUtils.h  SettingsDialog.cpp  SettingsDialog.h  serial_console.qrc
plugins/plugin_webtech/source/: CMakeLists.txt  EntryPoint.cpp  FileHandlerProvider.cpp  FileHandlerProvider.h  MonacoEditor.cpp  MonacoEditor.h  Plugin.cpp  Plugin.h  resources.qrc
source/app/: AboutDialog.cpp  AboutDialog.h  ActionBar.cpp  ActionBar.h  BundleLoader.cpp  BundleLoader.h  CMakeLists.txt  HoverMoveFilter.cpp  HoverMoveFilter.h  PageManager.cpp  PageManager.cpp.autosave  PageManager.h  PluginManager.cpp  PluginManager.h  Q.cpp  Q.h  QuartzComponent.cpp  QuartzComponent.h  QuartzExt.h  QuartzFramedWindow.cpp  QuartzFramedWindow.h  QuartzFramelessWindow.cpp  QuartzFramelessWindow.h  QuartzItem.cpp  QuartzView.cpp  QuartzWindow.cpp  QuartzWindow.h  QzMainWidget.cpp  QzMainWidget.h  TitleBar.cpp  TitleBar.h  ViewManager.cpp  ViewManager.h  WelcomePage.cpp  WelcomePage.h  quartz.cpp  quartz.qrc  quartz.rc
source/app/_old/: ComponentManager.cpp  ComponentManager.h
source/app/action_bar/: ActionBar.cpp  ActionBar.h  CMakeLists.txt
source/app/adapted/: CMakeLists.txt  CustomShadowEffect.cpp  CustomShadowEffect.h
source/app/bindings/: CMakeLists.txt  QzBinding.cpp  QzBinding.h
source/app/inbuilt/: CMakeLists.txt  EditorPage.cpp  EditorPage.h  LogView.cpp  LogView.h
source/app/interface/: CMakeLists.txt  IQuartzActionBar.h  IQuartzPageManager.h  IQuartzTitleBar.h  IQuartzViewManager.h  Q.cpp  QuartzContext.h  QuartzItem.h
source/app/page_manager/: CMakeLists.txt  QuartzPage.cpp  QuartzPage.h
source/app/resources/: CMakeLists.txt  quartz.desktop
source/app/theme/: CMakeLists.txt  Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h
source/app/title_bar/: CMakeLists.txt  QuartzItem.h  TitleBar.h
source/app/view_manager/: CMakeLists.txt  QuartzView.h  ViewManager.cpp
source/base/: CMakeLists.txt  Context.cpp  Context.h  QuartzBase.h  QzAppContext.cpp  QzAppContext.h
source/base/action_bar/: AbstractActionItemProvider.cpp  AbstractActionItemProvider.h  ActionBar.cpp  ActionBar.h  CMakeLists.txt  IActionItemProvider.h
source/base/content_manager/: AbstractContentProvider.cpp  AbstractContentProvider.h  CMakeLists.txt  ContentManager.cpp  ContentManager.h  ContentWidget.cpp  ContentWidget.h
source/base/explorer/: AbstractFileHandler.cpp  AbstractFileHandler.h  AbstractFileHandlerProvider.cpp  AbstractFileHandlerProvider.h  CMakeLists.txt  EditorManager.cpp  EditorManager.h  EditorPage.cpp  EditorPage.h  FileHandler.cpp  FileHandlerInfo.cpp  FileHandlerInfo.h  FileHandlerManager.cpp  FileHandlerManager.h  FileHandlerProvider.cpp  FileHandlerProvider.h  FileSystemSelector.cpp  FileSystemSelector.h
source/base/extension_details/: AdapterItemModel.cpp  AdapterItemModel.h  BundleInfoPage.cpp  BundleInfoPage.h  BundleItemModel.cpp  BundleItemModel.h  BundleListModel.cpp  BundleListModel.h  BundleSelector.cpp  BundleSelector.h  CMakeLists.txt  DetailsHolder.cpp  DetailsHolder.h  ExtensionItemModel.cpp  ExtensionItemModel.h  PluginConfigPage.cpp  PluginConfigPage.h  PluginInfoPage.cpp  PluginInfoPage.h  PluginItemModel.cpp  PluginItemModel.h  PluginSelector.cpp  PluginSelector.h  PluginTableModel.cpp  PluginTableModel.h
source/base/general_selector/: AbstractGeneralNodeProvider.cpp  AbstractGeneralNodeProvider.h  CMakeLists.txt  GeneralNodeTree.cpp  GeneralNodeTree.h  GeneralSelector.cpp  GeneralSelector.h  SelectionTree.cpp  SelectionTree.h
source/base/main_menu/: AbstractMenuProvider.cpp  AbstractMenuProvider.h  CMakeLists.txt  MainMenuButton.cpp  MainMenuButton.h
source/base/notification/: CMakeLists.txt  Msg.cpp  Msg.h  MsgView.cpp  MsgView.h  NotificationDrawer.cpp  NotificationDrawer.h  NotificationService.cpp  NotificationService.h  NotificationWidget.cpp  NotificationWidget.h  msg.h  show.h
source/base/page_manager/: AbstractPageProvider.cpp  QuartzPage.h  (+5 more)
source/common/: CMakeLists.txt  QuartzCommon.h  common.qrc
source/core/: CMakeLists.txt  Convenience.h  JobManager.cpp  JobManager.h  QuartzCore.h  QzCoreContext.cpp  QzCoreContext.h  stdafx.h
source/quartz_common/: CMakeLists.txt
source/vqcore/: CMakeLists.txt  VQ.h  VQCommon.h  Vq.h
(+613 files in other folders)
